styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: norse-bold;
  src: url(Norse-Bold.otf);
}

body {
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

.container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  height: 100vh;
}

.img_container {
  display: flex;
  position: relative;
  flex: 1;
  flex-direction: column;
  flex: 0 0 45%;
  color: white;
}

.background_img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.logo_overlay {
  display: flex;
  position: absolute;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  top: 20%;
  padding: 12px 0;
  background-color: rgba(33, 33, 33, 0.4);
  font-family: norse-bold;
  font-size: xx-large;
}

.logo {
  height: 15vh;
}

.credits {
  position: absolute;
  bottom: 0;
  margin-bottom: 12px;
  align-self: center;
}

.sign_up_form_container {
  display: flex;
  flex: 1;
  flex-direction: column;
  height: 100%;
  background-color: #f6f8fcf3;
}

.description_container {
  display: flex;
  flex-direction: column;
  font-weight: bold;
  width: 100%;
  padding-left: 5%;
}

.description_container p {
  max-width: 45ch;
}

.account_info_container {

  width: 100%;
  background-color: rgb(255, 255, 255);
  box-shadow: #0000003d 0px 3px 10px;
  padding-left: 5%;
}

.signup_form {
  display: flex;
  flex-wrap: wrap;

  & div {
    display: flex;
    flex-direction: column;
    margin: 1% 5% 1% 0;

    & label {
      font-size: 0.7rem;
      font-weight: 500;
    }
  }

  & input {
    border: 1px solid #e5e7ebf3;
    border-radius: 3px;
  }
  
}

.submit_button_container {
  padding-left: 5%;;
}

.form_row {
  margin-bottom: 20px;
  display: flex;
  flex-wrap: wrap;
}

